<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:id="@+id/background"
        android:layout_height="match_parent"
        android:background="@drawable/sunny_background"
        tools:context=".MainActivity">

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/search_view_shape"
            android:iconifiedByDefault="false"
            android:queryHint="search for a city"
            android:searchIcon="@drawable/search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnimationView"
            android:layout_width="128dp"
            android:layout_height="105dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cityName"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/sun" />

        <TextView
            android:id="@+id/cityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:drawablePadding="15dp"
            android:fontFamily="@font/merriweathersans_medium"
            android:text=""
            android:textColor="@color/black"
            android:textSize="24sp"
            app:drawableLeftCompat="@drawable/loctaion"
            app:layout_constraintEnd_toEndOf="@+id/searchView"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/searchView"
            app:layout_constraintTop_toBottomOf="@+id/searchView" />

        <TextView
            android:id="@+id/today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/merriweathersans_bold"
            android:text="@string/today"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lottieAnimationView"
            app:layout_constraintTop_toBottomOf="@+id/cityName" />

        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="92dp"
            android:fontFamily="@font/merriweathersans_bold"
            android:text="@string/_00_00"
            android:textColor="@color/black"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="@+id/today"
            app:layout_constraintTop_toBottomOf="@+id/today" />

        <TextView
            android:id="@+id/weatherCondition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/merriweathersans_regular"
            android:text="@string/sunny"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/lottieAnimationView"
            app:layout_constraintHorizontal_bias="0.739"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView" />

        <TextView
            android:id="@+id/maxSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/merriweathersans_regular"
            android:text="@string/max_00_00"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weatherCondition" />

        <TextView
            android:id="@+id/minSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/merriweathersans_regular"
            android:text="@string/min_00_00"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/maxSpeed"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/maxSpeed"
            app:layout_constraintTop_toBottomOf="@+id/maxSpeed" />

        <TextView
            android:id="@+id/day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/merriweathersans_medium"
            android:text="@string/tuesday"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/minSpeed"
            app:layout_constraintHorizontal_bias="0.523"
            app:layout_constraintStart_toStartOf="@+id/minSpeed"
            app:layout_constraintTop_toBottomOf="@+id/minSpeed" />

        <TextView
            android:id="@+id/Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/merriweathersans_regular"
            android:text="@string/_29th_august"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/day"
            app:layout_constraintHorizontal_bias="0.55"
            app:layout_constraintStart_toStartOf="@+id/day"
            app:layout_constraintTop_toBottomOf="@+id/day" />

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/backgroundhapeframelayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Date">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/backgroundhapeframelayout"
                    android:gravity="bottom|center_vertical"
                    android:orientation="vertical">

                    <ImageView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/humidity" />

                    <TextView
                        android:id="@+id/humidity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/merriweathersans_regular"
                        android:gravity="center"
                        android:text="@string/_00"
                        android:textColor="@color/black" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/merriweathersans_medium"
                        android:gravity="center"
                        android:text="@string/humidity"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/backgroundhapeframelayout"
                    android:gravity="bottom|center_vertical"
                    android:orientation="vertical">

                    <ImageView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/wind" />

                    <TextView
                        android:id="@+id/windspeed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/merriweathersans_regular"
                        android:gravity="center"
                        android:text="@string/_0_00m_s"
                        android:textColor="@color/black" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/merriweathersans_medium"
                        android:gravity="center"
                        android:text="@string/wind_speed"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/backgroundhapeframelayout"
                    android:gravity="bottom|center_vertical"
                    android:orientation="vertical">

                    <ImageView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/conditions" />

                    <TextView
                        android:id="@+id/condition"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/merriweathersans_regular"
                        android:gravity="center"
                        android:text="@string/sunny_"
                        android:textAllCaps="true"
                        android:textColor="@color/black" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/merriweathersans_medium"
                        android:gravity="center"
                        android:text="@string/condition"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/backgroundhapeframelayout"
                    android:gravity="bottom|center_vertical"
                    android:orientation="vertical">

                    <ImageView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/sunrise" />

                    <TextView
                        android:id="@+id/sunrise"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/_00_00_"
                        android:textColor="@color/black"
                        android:fontFamily="@font/merriweathersans_regular" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/merriweathersans_medium"
                        android:gravity="center"
                        android:text="Sunrise"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout5"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/backgroundhapeframelayout"
                    android:gravity="bottom|center_vertical"
                    android:orientation="vertical">

                    <ImageView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/sunset" />

                    <TextView
                        android:id="@+id/sunset"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/merriweathersans_regular"
                        android:gravity="center"
                        android:text="00:00"
                        android:textColor="@color/black" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/merriweathersans_medium"
                        android:gravity="center"
                        android:text="@string/sunset"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout6"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginBottom="386dp"
                    android:background="@drawable/backgroundhapeframelayout"
                    android:gravity="bottom|center_vertical"
                    android:orientation="vertical"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/flow"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/sea" />

                    <TextView
                        android:id="@+id/seapressure"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/merriweathersans_regular"
                        android:gravity="center"
                        android:text="@string/_0000_hpa"
                        android:textColor="@color/black" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/merriweathersans_medium"
                        android:gravity="center"
                        android:text="Sea"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                </LinearLayout>

                <androidx.constraintlayout.helper.widget.Flow
                    android:id="@+id/flow"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    app:constraint_referenced_ids="linearLayout,linearLayout2,linearLayout3,linearLayout4,linearLayout5,linearLayout6"
                    app:flow_maxElementsWrap="3"
                    app:flow_wrapMode="chain"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>